# AncientGrammarPlusPlus

./: .gitignore  CMakeLists.txt  azure-ci.yaml
include/: utf8proc.h  utils.h  verb.h
include/verbs/: deponentverb.h  regularverb.h  verb.h
python/: setup.py  wrapper.cpp
src/: test.cpp  utils.cpp  verb.cpp
src/utf8proc/: utf8proc.c
src/verbs/: deponentverb.cpp  regularverb.cpp  verb.cpp
